<resources>
    <string name="app_name">TripPlanner</string>
    <string name="welcome_label">Welcome!</string>
    <string name="Destination_label">Destination:</string>
    <string name="Destination_hint">Enter your destination ...</string>
    <string name="start_date_label">Start Date:</string>
    <string name="start_date_hint">YYYY/MM/DD</string>
    <string name="end_date_label">End Date:</string>
    <string name="num_adult_label">Number of adults:</string>
    <string name="num_hint_label">10</string>
    <string name="num_child_label">Number of children:</string>
    <string name="language_label">What language do you speak?</string>
    <string name="covid_label">Do you have Covid-19?</string>
    <string name="search_label">Search</string>
    <string name="show_sub_menu_item">SHOW SUBTITLE</string>
    <string name="hide_sub_menu_item">HIDE SUBTITLE</string>
    <string name="hotel_name_confirm">Hotel:</string>

    <string name="hotel_address_confirm">Address: %1$s</string>
    <string name="hotel_phone_confirm">Phone Number: %1$s</string>
    <string name="trip_people_confirm">Trippers: %1$d adults AND %2$d children </string>
    <string name="trip_date_confirm">Date: %1$s -> %2$s</string>
    <string name="agreement_confirm">I agree with the term and condition</string>

    <string name="start_polling">Start polling</string>
    <string name="stop_polling">Stop polling</string>
    <string name="new_hotel_title">New Hotel For Your Trip</string>
    <string name="new_hotel_text">%1$s just added a new hotel</string>


    <string name="list_hotel_label">List hotel</string>
    <string name="invalid_date_label">Sorry, your chosen date is invalid!</string>
    <string name="invalid_covid_label">Sorry, please indicate whether you have Covid-19 or not</string>
    <string name="covid_yes_label">Sorry, please stay at home!</string>
    <string name="destination_emptyError_label">Sorry, Please enter your destination!</string>

    <string name="result_hotel_list">%1$d %2$s</string>

    <string name="dumy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="title_activity_trip_maps">TripPlannerMap</string>
</resources>